# string-pool

./: CMakeLists.txt  config.cmake.in  optional.hpp  string_pool.hpp  string_tracker.cpp  string_tracker.hpp
example/: Makefile  example-input-2  example.cpp
include/: optional.hpp  string_pool.hpp  string_tracker.hpp  string_view.hpp
src/: string_tracker.cpp
